--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">surajyelpale@hotmail.com</div>
+                                <div class="sub-title">surajyelpale7@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.imsuraj.com">SurajYelpale</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Created By <a href="https://8uraj.github.io/suraj.github.io/?#contact">SurajYelpale</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
