--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>CONTACT ME WITOUT ANY ISSUE</p>
+                    <p>CONTACT ME WITHOUT ANY ISSUE</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
